Type user, schemas e tambem criado schema do DB

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "md5": "^2.3.0",
+    "mdfive": "^1.1.0",
     "mongoose": "^6.7.2",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
