--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-DN_CONEXAO_STRING=
+DB_CONEXAO_STRING=
 MINHA_CHAVE_JWT=
+BUCKET_AVATARES=
+CHAVE_LEITURA_AVATARES=
 CHAVE_GRAVACAO_AVATARES=
 CHAVE_GRAVACAO_PUBLICACAO=
-BUCKET_AVATARES=
+CHAVE_LEITURA_PUBLICACAO=
 BUCKET_PUBLICACOES=
